src/objects/Live_Agent_ID__c.object
<CustomObject>
    <fields>
        <fullName>Chat_Button_ID__c</fullName>
        <inlineHelpText>Populate this field with the Chat Button ID.  Go to &quot;Chat Buttons and Automated Invitations&quot; in Setup and click into the &quot;Napili Community Chat Button&quot;.  Copy the Chat Button Code ID out of your URL and paste into this field.</inlineHelpText>
        <label>Chat Button ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_ID_1__c</fullName>
        <inlineHelpText>Go to &quot;Deployments&quot; in Setup and click into the &quot;Chat from Napili Template&quot;.  Copy the Deployment ID out of your URL and paste into this field.</inlineHelpText>
        <label>Deployment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_ID_2__c</fullName>
        <inlineHelpText>Go to the &quot;Company Information&quot; page in Setup and copy the &quot;Salesforce.com Organization ID&quot; and paste into this field.</inlineHelpText>
        <label>Org ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Live Agent Lightning Setup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Live Agent Lightning Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>